test/tasty/neg-false/src-2/NewJVMEnv_fail.scala
package tastytest

import printing._

object NewJVMEnv {

  new Env.JVMEnv {} // error: scala is not a legal prefix for a constructor

}
